<resources>
    <string name="app_name">PlanDial</string>
    <string name="main_dial_slider">메인다이얼 슬라이더</string>
    <string name="category_circle">카테고리 원</string>
    <string name="logo_description">logo description</string>
    <string name="name">name</string>
    <string name="plus">plus</string>
    <string name="dial_image">dial image</string>
    <string name="SettingText">Setting</string>
    <string name="DialName">다이얼 이름</string>
    <string name="DialNameHint">이름을 입력하시오</string>
    <string name="DialTime">주기</string>
    <string name="Startday">시작일</string>
    <string name="DialPlusText">다이얼 생성</string>
    <string name="DialPlusText2">현재 설정대로 다이얼을 생성합니다</string>
    <string name="Done">완료</string>
    <string name="Empty_Temple">빈 템플</string>
    <string name="name_category">카테고리 이름</string>
    <string name="name_category2">카테고리 이름을 입력하시오</string>
    <string name="ch_dial1">다이얼 선택</string>
    <string name="ch_dial2">카테고리에 제외할 다이얼을 선택해주세요</string>
    <string name="ctPlusText">카테고리 생성</string>
    <string name="ctPlusText2">현재 설정대로 카테고리를 생성합니다</string>
    <string name="InactivateDial">다이얼 비활성화</string>
    <string name="appwidget_text">임박 다이얼</string>
    <string name="appwidget_empty_text">임박 다이얼이 없습니다</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="edit_category_name">카테고리 이름 변경</string>
    <string name="remove_category">카테고리 삭제</string>
    <string name="remove_category_sub">주의: 삭제 시 되돌릴 수 없습니다.</string>
    <string name="Remove">삭제</string>
    <string name="ChangeIcon">아이콘 변경</string>
    <string name="first_tutorial">나만의 첫 카테고리를 추가해봅시다 👉</string>
    <string name="category_edit_tutorial">카테고리를 꾹 눌러 수정 및 삭제할 수 있습니다.</string>
    <string name="dial_edit_tutorial">각 다이얼을 꾹 눌러 수정 및 삭제할 수 있습니다.</string>
</resources>