<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/CategoryName_Setting"
        android:layout_width="200dp"
        android:layout_height="23dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:gravity="left"
        android:text="@string/edit_category_name"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/Input_CategoryName"
        android:layout_width="304dp"
        android:layout_height="42dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_namebox"
        android:gravity="center"
        android:hint="@string/DialNameHint"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CategoryName_Setting" />

    <TextView
        android:id="@+id/Category_Remove"
        android:layout_width="200dp"
        android:layout_height="23dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="45dp"
        android:gravity="left"
        android:text="@string/remove_category"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Input_CategoryName"/>

    <TextView
        android:id="@+id/Category_Remove_Sub"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="4dp"
        android:gravity="left"
        android:text="@string/remove_category_sub"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Category_Remove" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/CategoryRemove_Button"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/redbutton"
        android:text="@string/Remove"
        app:layout_constraintStart_toEndOf="@id/Category_Remove"
        app:layout_constraintTop_toBottomOf="@id/Input_CategoryName" />

</androidx.constraintlayout.widget.ConstraintLayout>