<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/BackButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/ic_iconfinder_back_arrow_211686"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SettingText"
        android:layout_width="95dp"
        android:layout_height="30dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/SettingText"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintStart_toEndOf="@id/BackButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/Dial_Image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_imagechoice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SettingText"/>

    <TextView
        android:id="@+id/ct_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:text="@string/name_category"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Dial_Image"/>

    <EditText
        android:id="@+id/set_ct_name"
        android:layout_width="304dp"
        android:layout_height="42dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_namebox"
        android:hint="@string/name_category2"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ct_name" />

    <TextView
        android:id="@+id/Choice_dial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:text="@string/ch_dial1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/set_ct_name"/>

    <TextView
        android:id="@+id/Choice_dial2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="1dp"
        android:text="@string/ch_dial2"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Choice_dial"/>

    <ImageView
        android:id="@+id/DialPlus_box"
        android:layout_width="355dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:background="@drawable/bg_header_custom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/DialPlus_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="10dp"
        android:text="@string/ctPlusText"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/DialPlus_box"/>

    <TextView
        android:id="@+id/DialPlus_Text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="1dp"
        android:text="@string/ctPlusText2"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DialPlus_Text"/>

    <ImageButton
        android:id="@+id/DialPlus_Button"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/greenbutton"
        app:layout_constraintStart_toEndOf="@id/DialPlus_Text2"
        app:layout_constraintTop_toTopOf="@id/DialPlus_box"
        app:layout_constraintBottom_toBottomOf="@id/DialPlus_box"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Done"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/DialPlus_Button"
        app:layout_constraintEnd_toEndOf="@id/DialPlus_Button"
        app:layout_constraintTop_toTopOf="@id/DialPlus_Button"
        app:layout_constraintBottom_toBottomOf="@id/DialPlus_Button"/>

</androidx.constraintlayout.widget.ConstraintLayout>