<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/BackButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/ic_iconfinder_back_arrow_211686"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SettingText"
        android:layout_width="95dp"
        android:layout_height="30dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/SettingText"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintStart_toEndOf="@id/BackButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ChoiceImage"
        android:layout_width="252dp"
        android:layout_height="252dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_imagechoice"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SettingText" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@id/ChoiceImage"
        app:layout_constraintEnd_toEndOf="@id/ChoiceImage"
        app:layout_constraintStart_toStartOf="@id/ChoiceImage"
        app:layout_constraintTop_toTopOf="@id/ChoiceImage" />

    <TextView
        android:id="@+id/DialName_Setting"
        android:layout_width="100dp"
        android:layout_height="23dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/DialName"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ChoiceImage" />

    <EditText
        android:id="@+id/Input_DialName"
        android:layout_width="304dp"
        android:layout_height="42dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_namebox"
        android:gravity="center"
        android:hint="@string/DialNameHint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DialName_Setting" />

    <TextView
        android:id="@+id/DialTime_Setting"
        android:layout_width="140dp"
        android:layout_height="23dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/DialTime"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Input_DialName" />

    <com.example.plandial.LinearSelector
        android:id="@+id/unit_selector"
        android:layout_width="304dp"
        android:layout_height="42dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/ic_dial_choice3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DialTime_Setting">

        <ImageView
            android:id="@+id/unit_circle"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_marginLeft="3dp"
            android:foregroundTint="#000000"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/category_circle" />

    </com.example.plandial.LinearSelector>

    <TextView
        android:id="@+id/StartDay"
        android:layout_width="140dp"
        android:layout_height="23dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="10dp"
        android:text="@string/Startday"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/unit_selector" />

    <com.example.plandial.FormatTextView
        android:id="@+id/Input_Startday"
        android:layout_width="304dp"
        android:layout_height="42dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_namebox"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/StartDay"
        custom:formatString="%d.%d.%d %02d:%02d" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/DialPlus_box"
        android:layout_width="355dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_header_custom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/DialPlus_Text"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginStart="53dp"
            android:layout_marginTop="10dp"
            android:text="@string/DialPlusText"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/DialPlus_box" />

        <TextView
            android:id="@+id/DialPlus_Text2"
            android:layout_width="210dp"
            android:layout_height="20dp"
            android:layout_marginStart="53dp"
            android:layout_marginTop="1dp"
            android:text="@string/DialPlusText2"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/DialPlus_Text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/DialPlus_Button"
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:background="@drawable/greenbutton"
            android:text="@string/Done"
            app:layout_constraintBottom_toBottomOf="@id/DialPlus_box"
            app:layout_constraintStart_toEndOf="@id/DialPlus_Text2"
            app:layout_constraintTop_toTopOf="@id/DialPlus_box" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>